[b]Version 0.6.3[/b]:

(2008-09-20)
 * The comboboxes to select the video and audio driver in Preferences->
   General have changed. Now they are not editable, and only show some
   of the available drivers (png, jpeg... and so on are not shown). There's
   also an "User defined" option. If selected, a line edit will appear where
   the user can type the driver to use (possibly with additional options).
 * The code in preferences.h/preferences.cpp has been reorganized, and 
   now the preferences are saved in several sections in smplayer.ini.
   That means most of your settings will be lost and you'll have to reconfigure
   smplayer again (I even recommend to delete smplayer.ini, otherwise there'll 
   be a mix of the old settings with the new ones).

(2008-09-19)
 * It seems crashes still happen in the code to select subtitle tracks.
   The bug hasn't been located yet (the crash is difficult to reproduce)
   but I have added a new check in a lower level, in the function 
   SubTracks::itemAt(). Now it checks if the requested item is in range. If
   it's not valid it will print a warning and return an empty subtitle.

(2008-09-17)
 * Added an icon for the Play/Pause action. (This breaks all icon themes...)
 * Added a new option for smplayer.ini: gui_minimum_width. The width of the
   main window won't be smaller than the value of that option.
   If gui_minimum_width is set to 0 (the default) then the minimum width 
   will be the size hint of the window.

(2008-09-16)
 * (Windows) Added a new option in Preferences->General that allows the user 
   to select which screen will display the video when using directx as video 
   driver. This option is visible only when directx is selected.
 * (Windows) Added also a submenu Screen under the Video menu for an easier
   selection of the screen.

(2008-09-14)
 * Check in Core::changeSubtitle() that the selected subtitle is in a valid
   range. This should avoid crashes.

(2008-09-13)